--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,5 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: gymify_backend_production
-  username: gymify_backend
-  password: <%= ENV['GYMIFY_BACKEND_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+
