--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,19 +1,19 @@
 ---
 development:
-  cloud_name: wales
-  api_key: '624481182594394'
-  api_secret: 6TXy_-D4Cl8czLYivQcZc1EYSkk
+  cloud_name: <%= Rails.application.credentials.cloudinary[:cloud_name] %>
+  api_key: <%= Rails.application.credentials.cloudinary[:api_key] %>
+  api_secret: <%= Rails.application.credentials.cloudinary[:api_secret] %>
   enhance_image_tag: true
   static_file_support: false
 production:
-  cloud_name: wales
-  api_key: '624481182594394'
-  api_secret: 6TXy_-D4Cl8czLYivQcZc1EYSkk
+  cloud_name: <%= Rails.application.credentials.cloudinary[:cloud_name] %>
+  api_key: <%= Rails.application.credentials.cloudinary[:api_key] %>
+  api_secret: <%= Rails.application.credentials.cloudinary[:api_secret] %>
   enhance_image_tag: true
   static_file_support: true
 test:
-  cloud_name: wales
-  api_key: '624481182594394'
-  api_secret: 6TXy_-D4Cl8czLYivQcZc1EYSkk
+  cloud_name: <%= Rails.application.credentials.cloudinary[:cloud_name] %>
+  api_key: <%= Rails.application.credentials.cloudinary[:api_key] %>
+  api_secret: <%= Rails.application.credentials.cloudinary[:api_secret] %>
   enhance_image_tag: true
   static_file_support: false
